# BoardNet

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/src/: filelib.rs  main.rs  netlib.rs  savedat.rs
client/task/: main.py
server/: Cargo.toml  Rocket.toml
server/src/: db.rs  filelib.rs  main.rs  web.rs
server/src/templates/: index.html.tera  new_task.html.tera
server/task/: main.py
src/: db.rs  filelib.rs  ioutils.rs  lib.rs  netfaces.rs  web.rs
updater/src/: main.rs
