[package]
name = "cluster"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fxhash = "0.2.1"
serde = {version = "1.0.190", features = ["derive"]}
rocket = "=0.5.0"

[workspace]
members = [".", "client", "server"]
