[package]
name = "server"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cluster = {path = ".."}
ciborium = "0.2.1"
mysql = "24.0.0"
rocket = "=0.5.0"
rocket_dyn_templates = {version = "0.1.0", features = ["tera"]}
queues = "1.0.2"